# example-openapi-tools-server

./: Dockerfile  README.md  agents.md  openapi.yaml  pyproject.toml
app/: cli.py  main.py
app/routers/: __init__.py  echo.py  math.py  time.py
docs/: docker.md  index.md  packaging.md  requirements.md  testing.md
examples/: codex.md  langchain.py  openwebui.yaml
