[project]
name = "example-openapi-tools-server"
version = "0.1.0"
description = "Example OpenAPI tools server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["app"]
