[project]
name = "example-openapi-tools-server"
version = "0.0.1"
description = "Example OpenAPI tools server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Henri Wenlin", email = "henri.wenlin@gmail.com"}]
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pyyaml>=6",
]

[tool.setuptools.packages.find]
where = ["app"]
